objects/Account.object
<CustomObject>
    <fields>
        <fullName>Field_One__c</fullName>
        <label>Field One</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Two__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field Two</label>
        <type>Checkbox</type>
    </fields>
 <fields>
        <fullName>Field_Three__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field Three</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>